tests/golden/errors/type_after_fn.kso
pub play = print "x"

type user
  admin:bool
  name:string
